<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">fastcomments</string>
    <string name="no_comments_yet">No comments yet. Be the first to comment!</string>
    <string name="error_loading_comments">Error loading comments. Please try again.</string>
    <string name="error_posting_comment">Error posting comment. Please try again.</string>
    <string name="comment_posted_successfully">Comment posted successfully</string>
    <string name="generic_loading_error">An error occurred loading comments. Please try again later.</string>
    <string name="anonymous">Anonymous</string>
    <string name="comment_hint">Write a comment…</string>
    <string name="reply_hint">Write a reply…</string>
    <string name="submit_comment">Submit</string>
    <string name="reply">Reply</string>
    <string name="cancel_replying">Cancel Replying</string>
    <string name="cancel_reply_title">Cancel Reply?</string>
    <string name="cancel_reply_confirm">Are you sure you want to cancel this reply? Your text will be lost.</string>
    <string name="show_replies">Show Replies (%1$d)</string>
    <string name="loading_replies">Loading...</string>
    <string name="error_loading_replies">Failed to load replies</string>
    <string name="hide_replies">Hide Replies</string>
    <string name="user_avatar">User Avatar</string>
    <string name="empty_comment_error">Comment cannot be empty</string>
    <string name="cancel">Cancel</string>
    <string name="replying_to">Replying to %s</string>
    <string name="new_comment">Add a comment</string>
    <string name="add_comment_hint">Add a comment...</string>
    <string name="send_comment">Send comment</string>
    <string name="next_comments">Next (%1$d)</string>
    <string name="load_all">Load All (%1$d)</string>
    <string name="loading_more">Loading...</string>
    
    <!-- Live commenting strings -->
    <string name="show_new_comments">Show %1$d New Comments</string>
    <string name="show_new_replies">Show %1$d New Replies</string>
    <string name="load_older_messages">Load Older Messages (%1$d)</string>
    <string name="load_all_messages">Load All %1$d Messages</string>
    <string name="chat_hint">Type a message…</string>
    
    <!-- Voting strings -->
    <string name="upvote">Upvote</string>
    <string name="downvote">Downvote</string>
    <string name="like">Like</string>
    <string name="upvoted">Upvoted</string>
    <string name="downvoted">Downvoted</string>
    <string name="liked">Liked</string>
    <string name="vote_success">Vote recorded</string>
    <string name="vote_removed">Vote removed</string>
    <string name="error_voting">Error recording vote</string>
    <string name="you_upvoted">You upvoted %1$s\'s comment</string>
    <string name="you_downvoted">You downvoted %1$s\'s comment</string>
    <string name="you_liked">You liked %1$s\'s comment</string>
    <string name="you_removed_upvote">You removed your upvote from %1$s\'s comment</string>
    <string name="you_removed_downvote">You removed your downvote from %1$s\'s comment</string>
    <string name="you_removed_like">You removed your like from %1$s\'s comment</string>
    <string name="login_to_vote">Please log in to vote</string>
    <string name="vote_count_zero">0</string>
    <string name="like_count_singular">%d like</string>
    <string name="like_count_plural">%d likes</string>
    <string name="comment_count_singular">%d comment</string>
    <string name="comment_count_plural">%d comments</string>
    <string name="like_comment_count">%1$s • %2$s</string>
    
    <!-- User authentication dialog -->
    <string name="vote_login_title">Log in to Vote</string>
    <string name="comment_login_title">Log in to Comment</string>
    <string name="enter_username_email_message">Please enter your name and email to continue</string>
    <string name="enter_username_message">Please enter your name to continue</string>
    <string name="vote_anon_notice">You can continue as a guest user.</string>
    <string name="comment_anon_notice">You can comment as a guest, but your name will be shown with your comment.</string>
    <string name="username_hint">Your Name</string>
    <string name="email_hint">Email Address</string>
    <string name="username_required">Name is required</string>
    <string name="email_required">Email is required</string>
    <string name="submit">Submit</string>
    <string name="unverified">Unverified</string>
    <string name="pinned_comment">Pinned Comment</string>
    <string name="locked_comment">Locked Comment</string>
    <string name="online_indicator">User is Online</string>
    <string name="badge_icon">Badge Icon</string>
    <string name="badge_awarded">Badge Awarded!</string>
    <string name="close">Close</string>
    <string name="edit_comment">Edit Comment</string>
    <string name="delete_comment">Delete Comment</string>
    <string name="flag_comment">Flag Comment</string>
    <string name="block_user">Block User</string>
    <string name="unblock_user">Unblock User</string>
    <string name="menu_button">Menu Button</string>
    <string name="edit_your_comment">Edit Your Comment</string>
    <string name="save_changes">Save Changes</string>
    <string name="cancel_edit">Cancel</string>
    <string name="flag_success">Comment has been flagged</string>
    <string name="block_success">User has been blocked</string>
    <string name="error_editing_comment">Error editing comment. Please try again.</string>
    <string name="comment_edited_successfully">Comment edited successfully</string>
    <string name="error_flagging_comment">Error flagging comment. Please try again.</string>
    <string name="comment_flagged_successfully">Comment flagged successfully</string>
    <string name="error_blocking_user">Error blocking user. Please try again.</string>
    <string name="user_blocked_successfully">User blocked successfully</string>
    <string name="block_user_title">Block User</string>
    <string name="block_user_confirm">Are you sure you want to block %1$s and hide their comments?</string>
    <string name="block">Block</string>
    <string name="unblock">Unblock</string>
    <string name="unblock_user_title">Unblock User</string>
    <string name="unblock_user_confirm">Are you sure you want to unblock %1$s?</string>
    <string name="user_unblocked_successfully">User unblocked successfully</string>
    <string name="error_unblocking_user">Error unblocking user. Please try again.</string>
    <string name="you_blocked_this_user">You have blocked this user.</string>
    <string name="blocked_user_placeholder">Blocked User</string>
    <string name="delete_comment_title">Delete Comment</string>
    <string name="delete_comment_confirm">Are you sure you want to delete this comment?</string>
    <string name="delete">Delete</string>
    <string name="error_deleting_comment">Error deleting comment. Please try again.</string>
    <string name="comment_deleted_successfully">Comment deleted successfully</string>
    <string name="delete_post_title">Delete Post</string>
    <string name="delete_post_confirm">Are you sure you want to delete this post?</string>
    <string name="error_deleting_post">Error deleting post. Please try again.</string>
    <string name="post_deleted_successfully">Post deleted successfully</string>
    <string name="comments">Comments</string>
    
    <!-- Feed view strings -->
    <string name="no_posts_yet">No posts to display.</string>
    <string name="error_loading_posts">Error loading posts. Please try again.</string>
    <string name="post_image">Post image</string>
    <string name="play_video">Play video</string>
    <string name="link_icon">Link icon</string>
    <string name="comment">Comment</string>
    <string name="share">Share</string>
    <string name="follow">Follow</string>
    <string name="following">Following</string>
    <string name="minutes_ago">%1$d mins ago</string>
    <string name="hours_ago">%1$d hrs ago</string>
    <string name="days_ago">%1$d days ago</string>
    <string name="just_now">Just now</string>
    <string name="yesterday">Yesterday</string>
    <string name="post_liked">Post liked</string>
    <string name="post_like_removed">Like removed</string>
    <string name="error_liking_post">Failed to like or unlike that post.</string>
    <string name="previous_image">Previous image</string>
    <string name="next_image">Next image</string>
    <string name="image_counter">%1$d/%2$d</string>
    <string name="view_details">View Details</string>
    <string name="learn_more">Learn More</string>
    
    <!-- Post creation strings -->
    <string name="create_post_hint">What\'s on your mind?</string>
    <string name="post">Post</string>
    <string name="attach_image">Attach image</string>
    <string name="attach_link">Attach link</string>
    <string name="remove_image">Remove image</string>
    <string name="remove_link">Remove link</string>
    <string name="posting">Posting...</string>
    <string name="post_success">Post created successfully</string>
    <string name="post_error">Error creating post. Please try again.</string>
    <string name="add_link">Add Link</string>
    <string name="link_url">Link URL</string>
    <string name="link_title">Link Title (Optional)</string>
    <string name="link_description">Link Description (Optional)</string>
    <string name="link_url_required">Link URL is required</string>
    <string name="invalid_url">Please enter a valid URL</string>
    <string name="selected_media">Selected media</string>
    <string name="image_required">Please select an image</string>
    <string name="max_images_reached">Maximum number of images reached</string>
    <string name="content_required">Post content is required</string>
    <string name="media_upload_failure">Failed to upload media</string>
    <string name="create_new_post">Create New Post</string>
    
    <!-- Comment cancellation dialog -->
    <string name="cancel_comment_title">Cancel Comment?</string>
    <string name="cancel_comment_confirm">Are you sure you want to cancel? Your text will be lost.</string>
    
    <!-- Mention strings -->
    <string name="mention_no_results">No users found</string>
    <string name="mention_searching">Searching for users...</string>

    <!-- Formatting toolbar strings -->
    <string name="format_bold">Bold</string>
    <string name="format_italic">Italic</string>
    <string name="format_code">Code</string>
    <string name="link_url_hint">URL</string>
    <string name="link_text_hint">Link text (optional)</string>
    <string name="add">Add</string>

    <!-- Custom toolbar button examples -->
    <string name="add_gif">Add GIF</string>
    <string name="insert_image">Insert Image</string>
    <string name="add_emoji">Add Emoji</string>
    <string name="mention_user">Mention User</string>

    <!-- Feed -->
    <plurals name="show_new_posts">
        <item quantity="one">Show %d New Post</item>
        <item quantity="other">Show %d New Posts</item>
    </plurals>

    <!-- Live chat header -->
    <string name="live_chat_live">Live</string>
    <string name="live_chat_connecting">Connecting\u2026</string>
    <plurals name="live_chat_users_online">
        <item quantity="one">%d User Online</item>
        <item quantity="other">%d Users Online</item>
    </plurals>
</resources>
